--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: google_maps_test
+name: coronasafe
 description: testing google maps for the hackathon project
 
 # The following line prevents the package from being accidentally published to
