--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   implicitly_animated_reorderable_list: ^0.4.2
   fl_chart: ^0.40.2
   webview_flutter: ^3.0.0
-  flutter_neumorphic: ^3.2.0
+  google_fonts: ^2.1.1
 
   
   
